@@ -54,6 +54,9 @@ package() {
 
   install -Dm 0644 -o root "../othersrc/lib-systemd-system/user-runtime-dir@.service.d/override.conf" -t "${pkgdir}/usr/lib/systemd/system/user-runtime-dir@.service.d"
 
+  # tmpfiles.d
+  install -Dm 0644 -o root "../othersrc/usr-lib/tmpfiles.d/genie-stub-resolv.conf" -t "${pkgdir}/usr/lib/tmpfiles.d"
+
   # man page
   cp ../othersrc/docs/genie.8 /tmp/genie.8
   gzip -9 /tmp/genie.8
