@@ -37,6 +37,7 @@ install -d -p %{buildroot}%{_libexecdir}/%{name}
 install -d -p %{buildroot}%{_sysconfdir}
 install -d -p %{buildroot}%{_exec_prefix}/lib/systemd/system-environment-generators
 install -d -p %{buildroot}%{_exec_prefix}/lib/systemd/user-environment-generators
+install -d -p %{buildroot}%{_exec_prefix}/lib/tmpfiles.d
 install -d -p %{buildroot}%{_bindir}
 install -d -p %{buildroot}%{_unitdir}
 install -d -p %{buildroot}%{_unitdir}/user-runtime-dir@.service.d
@@ -50,6 +51,7 @@ install -m 0644 -vp othersrc/etc/genie.ini %{buildroot}%{_sysconfdir}/
 install -m 0644 -vp othersrc/lib-systemd-system/wslg-xwayland.service %{buildroot}%{_unitdir}
 install -m 0644 -vp othersrc/lib-systemd-system/wslg-xwayland.socket %{buildroot}%{_unitdir}
 install -m 0644 -vp othersrc/lib-systemd-system/user-runtime-dir@.service.d/override.conf %{buildroot}%{_unitdir}/user-runtime-dir@.service.d
+install -m 0644 -vp othersrc/usr-lib/tmpfiles.d/genie-stub-resolv.conf" %{buildroot}%{_exec_prefix}/lib/tmpfiles.d/
 ln -sf %{_libexecdir}/%{name}/%{name} %{buildroot}%{_bindir}/%{name}
 ln -sf %{_libexecdir}/%{name}/80-genie-envar.sh %{buildroot}%{_exec_prefix}/lib/systemd/system-environment-generators/
 ln -sf %{_libexecdir}/%{name}/80-genie-envar.sh %{buildroot}%{_exec_prefix}/lib/systemd/user-environment-generators/
@@ -64,6 +66,7 @@ rm -f %{_unitdir}/sockets.target.wants/wslg-xwayland.socket
 rm -f %{_unitdir}/wslg-xwayland.service
 rm -f %{_unitdir}/wslg-xwayland.socket
 rm -f %{_unitdir}/user-runtime-dir@.service.d/override.conf
+rm -f %{_exec_prefix}/lib/tmpfiles.d/genie-stub-resolv.conf
 
 %clean
 rm -rf %{buildroot}
@@ -78,10 +81,12 @@ rm -rf %{buildroot}
 %{_unitdir}/wslg-xwayland.socket
 %{_unitdir}/sockets.target.wants/wslg-xwayland.socket
 %{_unitdir}/user-runtime-dir@.service.d/override.conf
+%{_exec_prefix}/lib/tmpfiles.d/genie-stub-resolv.conf
 
 %changelog
 * Tue Jun 08 2021 Alistair Young <avatar@arkane-systems.net> 1.43-1
 - Based on collated systemd-analyze results, re-upped systemd startup timeout to 240.
+- Added automated creation of resolv.conf symlink.
 
 * Thu May 06 2021 Alistair Young <avatar@arkane-systems.net> 1.42-1
 - Regression fixes.
